--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.3.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
-    "@angular/material": "^6.3.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
@@ -26,6 +24,7 @@
     "@ngx-translate/http-loader": "3.0.0",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "1.9.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
